# learn-almost-anything

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/catalog-docker-image/: SKILL.md
.claude/skills/generate-course/: SKILL.md
.claude/skills/generate-course/references/: domains.md  editing-and-sources.md  fact-checking.md  images.md  spaces.md
.github/workflows/: notarization-diagnostic.yml  notary-canary.yml  release.yml
catalog-server/: README.md  package.json  server.mjs
docs/demo/: hero.sh  hero.tape
scripts/: auto-release.mjs  copy-sidecar.mjs  sign-sidecar-native.mjs  verify-sidecar.mjs
sidecar/: package.json  pnpm-lock.yaml
sidecar/src/: index.mjs
sidecar/src/agents/: claude.mjs  codex.mjs
sidecar/src/course-mcp/: server.mjs
sidecar/src/lib/: brave.mjs  categories.mjs  devlog.mjs  interactive.mjs  math-lint.mjs  mcp-probe.mjs  mediawiki-readonly-proxy.mjs  mediawiki.config.json  pedagogy.mjs  reference-mcp.mjs  widget-templates.mjs
src/: App.css  App.tsx  BlockEditor.tsx  ErrorBoundary.tsx  editorCode.tsx  editorMath.tsx  editorSlash.tsx  editorWidget.tsx  i18n.tsx  main.tsx  mermaid-grammar.ts  transport.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V10__add_course_category.sql  V11__add_course_generation_profile.sql  V12__progress_test_attempts.sql  V13__add_reviews.sql  V14__module_prereqs.sql  V15__add_cards.sql  V16__space_source_enabled.sql  V17__add_roadmaps.sql  V18__roadmap_chat.sql  V19__course_mcp.sql  V1__initial.sql  V20__course_catalog_server.sql  V21__course_roadmap_tags.sql  V22__add_fact_input.sql  V23__add_module_instructions.sql  V24__add_module_style.sql  V2__add_course_agent.sql  V3__add_course_title.sql  V4__add_catalog_sync.sql  V5__add_course_format.sql  V6__add_spaces.sql  V7__space_strict.sql  V8__course_strict.sql  V9__course_translation.sql
src-tauri/src/: catalog.rs  coderun.rs  courses.rs  db.rs  events.rs  lib.rs  main.rs  media.rs  py_tracer.py  roadmaps.rs  settings.rs  share.rs  sidecar.rs  srs.rs
