[package]
name = "learn-almost-anything"
version = "0.1.13"
description = "Learn (Almost) Anything — local AI tutor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "learn_almost_anything_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
ureq = { version = "2", features = ["json", "tls"] }
urlencoding = "2"
url = "2"
regex = "1"
base64 = "0.22"
tiny_http = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2.7.1"
